# mom-fw

./: .gitignore  README.md  cio_momentum_dashboard_live.html  etf_universe.csv  index.html  mapping.csv  mom_gen.py  package-lock.json  package.json  pyproject.toml  requirements.txt  sync_ui.sh  tailwind.config.js
.claude/hooks/: session-start.sh
.github/workflows/: daily-mom-gen.yml  sync-index-html.yml  sync-ui.yml
api/: portfolios.js  tama-taa.js
api/portfolios/: [name].js
public/: data.json
risk_control_ta/: __init__.py  main.py
risk_control_ta/core/: config.py
src/: App.tsx  index.css  types.ts
src/components/: CioConstraints.tsx  CioOverview.tsx  CioRegionPanel.tsx  CioSignals.tsx  ComingSoon.tsx  ErrorBoundary.tsx  Screener.tsx  Settings.tsx
src/data/: useData.ts
src/lib/: cio.ts  score.ts
tests/: test_main.py  test_mom_gen.py
